<resources>
    <string name="app_name">WeChatted</string>
    <string name="recently_extracted">Recently extracted</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="retry">Retry</string>
    <string name="request_root_permission">Request root permission</string>
    <string name="read_imei">Read IMEI</string>
    <string name="read_uin">Read UIN</string>
    <string name="copy_history">Copy history</string>
    <string name="read_history">Read history</string>
    <string name="choose_account">Choose account</string>
    <string name="detect_current_account">Detect current account</string>
    <string name="read">Read</string>
    <string name="ok">OK</string>
    <string name="switch_account">Switch account</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="imei">IMEI</string>
    <string name="wechat_uin">WeChat UIN</string>
    <string name="root_access_is_required_to_read_wechat_uin">Root access is required to read WeChat UIN.</string>
    <string name="root_access_is_required_to_read_wechat_history">Root access is required to read WeChat history.</string>
    <string name="failed_to_read_uin">Failed to read UIN.</string>
    <string name="failed_to_get_current_uid">Fail to get current uid</string>
    <string name="this_is_the_avatar_of_the_conversation">This is the avatar of the conversation</string>
    <string name="place_holder">PlaceHolder</string>
    <string name="place_holder_long">This is a place holder and should not be seen.</string>
    <string name="extraction_name">Extraction name</string>
    <string name="save">Save</string>
    <string name="history_files_will_be_saved_to">History files will be saved to SdCard/WeChatted/.</string>
    <string name="select_conversations">Select conversations</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="save_decrypted_databases">Save decrypted databases</string>
    <string name="extraction_name_format">History%1$s</string>
    <string name="open">Open</string>
    <string name="unable_to_open_file_does_not_exist">Unable to open %1$s: file does not exist</string>
    <string name="request_permissions_not_granted">Request permissions not granted</string>
    <string name="request_permissions">Request permissions</string>
    <string name="request_extraction_permissions_explanation">The app need READ_PHONE_STATE to get IMEI code for your device, and WRITE_EXTERNAL_STORAGE to save extracted history files to your device.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
