<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_extract"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.perqin.wechatted.activity.ExtractActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/extraction_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/extraction_name"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/start"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_files_will_be_saved_to"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                tools:ignore="ButtonStyle" />
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/open_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
