<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.perqin.wechatted.fragment.ExtractAccountFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_account"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
    <RadioGroup
        android:id="@+id/account_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">
        <RadioButton
            android:id="@+id/detect_current_account_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detect_current_account"
            android:checked="true"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center_vertical">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/manage_accounts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_accounts"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/read_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"/>
    </LinearLayout>
</LinearLayout>
